--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -137,3 +137,56 @@ body {
   /* opcional */
   -moz-osx-font-smoothing: grayscale;
 }
+
+.welcome__img{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1;
+  object-fit: cover;
+}
+.text{
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(254, 253, 237, 0.7);
+
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 19px;
+}
+.welcome__h2{
+  color: rgb(161, 195, 152);
+  font-size: 50px;
+}
+.welcome__p{
+  width: 75%;
+  color: rgb(250, 112, 112);
+  font-size: 25px;
+  text-align: center;
+}
+.welcome__a{
+  padding: 23px 35px;
+  background-color: rgb(254, 253, 237);
+  display: inline;
+  border-radius: 50px;
+  color: rgb(250, 112, 112);
+  border: 1px solid rgb(250, 112, 112);
+}
+.welcome__a:hover{
+  background-color: rgb(250, 112, 112);
+  color: rgb(254, 253, 237);
+  
+}
+
+@media(max-width: 700px){
+  .welcome__h2{
+    width: 70%;
+    text-align: center;
+  }
+}
