--- a/src/components/Cocktail.css
+++ b/src/components/Cocktail.css
@@ -141,13 +141,13 @@
   
 .info {
   width: 60%;
-    margin: 20px auto 0;
+    margin: 1.25rem auto 0;
     height: 100vh ;
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
     align-items: flex-start;
-    gap: 33px;
+    gap: 2.0625rem;
   }
   
   .info__img {
@@ -159,50 +159,50 @@
   
   .info__h2 {
     color: rgb(250, 112, 112);
-    font-size: 30px;
+    font-size: 1.875rem;
   }
   
   .info__h3 {
-    margin-top: 20px;
+    margin-top: 1.25rem;
     color: rgb(161, 195, 152);
-    font-size: 22px;
+    font-size: 1.375rem;
   }
 
   .info__p{
-    margin-top: 10px;
-    font-size: 13px;
+    margin-top: .625rem;
+    font-size: .8125rem;
   }
   
   .info__ul {
-    margin-top: 10px;
+    margin-top: .625rem;
 
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
-    gap: 10px;
+    gap: .625rem;
   }
   
   .info__li {
     background-color: rgb(161, 195, 152);
-    padding: 3px 6px;
-    border-radius: 10px;
-    font-size: 13px;
+    padding: .1875rem .375rem;
+    border-radius: .625rem;
+    font-size: .8125rem;
     color:  rgb(254, 253, 237);
   }
 
   .info__li:hover{
     background-color: rgb(254, 253, 237);
     color: rgb(161, 195, 152);
-    border: .5px solid rgb(161, 195, 152);
+    border: .3125rem solid rgb(161, 195, 152);
   }
 
   .info__button.delete{
 
-    padding: 13px 15px;
+    padding: .8125rem .9375rem;
     background-color: rgb(254, 253, 237);
     display: inline;
-    border: 0.5px solid rgb(250, 112, 112);
-    border-radius: 50px;
+    border: .0313rem solid rgb(250, 112, 112);
+    border-radius: 3.125rem;
     color: rgb(250, 112, 112);
   }
 
@@ -216,15 +216,15 @@
     flex-flow: row nowrap;
     justify-content: flex-start;
     align-items: center;
-    gap: 20px;
+    gap: 1.25rem;
   }
   .info__button.edit{
 
-    padding: 13px 15px;
+    padding: .8125rem .9375rem;
     background-color: rgb(254, 253, 237);
     display: inline;
-    border: 0.5px solid rgb(161, 195, 152);
-    border-radius: 50px;
+    border: .0313rem solid rgb(161, 195, 152);
+    border-radius: 3.125rem;
     color: rgb(161, 195, 152);
   }
 
