--- a/src/components/Edit.css
+++ b/src/components/Edit.css
@@ -140,17 +140,17 @@
 
 
 .edit{
-    margin: 20px;
+    margin: 1.25rem;
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
     align-items: flex-start;
-    gap: 33px;
+    gap: 2.0625rem;
 }
 
 .edit__img{
     max-width: 50%; 
-    
+
     background-color: green;
 }
 
@@ -177,7 +177,7 @@
 }
 
 .edit__input.steps{
-    padding-bottom: 100px;   
+    padding-bottom: 6.25rem;   
 }
 
 .edit__buts{
@@ -185,16 +185,16 @@
     flex-flow: row nowrap;
     justify-content: flex-start;
     align-items: center;
-    gap: 20px;
+    gap: 1.25rem;
 }
 
 .edit__button.cancel{
-    margin-top: 30px;
-    padding: 13px 15px;
+    margin-top: 1.875rem;
+    padding: .8125rem .9375rem;
     background-color: rgb(254, 253, 237);
     display: inline;
-    border: 0.5px solid rgb(250, 112, 112);
-    border-radius: 50px;
+    border: .0313rem solid rgb(250, 112, 112);
+    border-radius: 3.125rem;
     color: rgb(250, 112, 112);
 }
 
@@ -204,12 +204,12 @@
 }
 
 .edit__button.save{
-    margin-top: 30px;
-    padding: 13px 15px;
+    margin-top: 1.875rem;
+    padding: .8125rem .9375rem;
     background-color: rgb(254, 253, 237);
     display: inline;
-    border: 0.5px solid rgb(161, 195, 152);
-    border-radius: 50px;
+    border: .0313rem solid rgb(161, 195, 152);
+    border-radius: 3.125rem;
     color: rgb(161, 195, 152);
 }
 
